[gd_scene load_steps=5 format=2]

[ext_resource path="res://Interface/Assets/Fonts/FredokaOne_48.tres" type="DynamicFont" id=1]
[ext_resource path="res://Interface/UI/TitleScreen/Buttons/TitleButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Interface/UI/Options/Options.gd" type="Script" id=3]
[ext_resource path="res://Interface/UI/Transitions/Fade.tscn" type="PackedScene" id=4]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.054902, 0.0352941, 0.184314, 1 )

[node name="Options" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1800.0
margin_bottom = 1000.0

[node name="Label" type="Label" parent="Options"]
margin_right = 1680.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 1 )
text = "NOT  IMPLEMENTED :)"
align = 1

[node name="CenterRow" type="HBoxContainer" parent="Options"]
margin_top = 63.0
margin_right = 1680.0
margin_bottom = 920.0
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Buttons" type="VBoxContainer" parent="Options/CenterRow"]
margin_right = 360.0
margin_bottom = 857.0
custom_constants/separation = 20
alignment = 1

[node name="TitleButton" parent="Options/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_top = 398.0
margin_right = 360.0
margin_bottom = 458.0
transition_to = "res://Interface/UI/TitleScreen/TitleScreen_UI.tscn"

[node name="Fade" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="fade_finished" from="Fade" to="." method="_on_Fade_fade_finished"]
